<resources>
    <string name="app_name">My Application</string>
    <string name="best_suggest">پیشنهاد ویژه</string>
    <string name="three_d">3 D</string>
    <string name="product_title">گوشی آیفون 6s اپل | Apple iPhone 6s</string>
    <string name="product_description">Apple IPhone 6s 64GB Mobile Phone</string>
    <string name="product_color">رنگ</string>
    <string name="product_number_color">3 رنگ</string>
    <string name="warranty">گارانتی 18 ماه دیجی کالا</string>
    <string name="sell_digikala">فروش توسط دیجی کالا</string>
    <string name="post_digikala">آماده ارسال از انبار دیجی کالا</string>
    <string name="product_price">1.870,000 تومان</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_our_cozy_coffee_corner_where_every_cup_is_a_delightful_for_you">Welcome to our cozy coffee corner, where every cup is a delightful for you.</string>
    <string name="fall_in_love_with_coffee_in_blissful_delight">Fall in love with Coffee in Blissful Delight!</string>
    <string name="location">Location</string>
    <string name="bilzen_tanjungbalai">Bilzen, Tanjungbalai</string>
    <string name="serach_coffee">Serach coffee</string>
    <string name="description">Description</string>
    <string name="buy_now">Buy Now</string>
    <string name="price">Price</string>
</resources>