<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".coffeeView.DetailActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/main_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
       android:layout_width="0dp"
       android:layout_height="0dp"
       android:src="@drawable/caffe1"
       android:id="@+id/img_detail_poster"
       android:scaleType="centerCrop"
       app:layout_constraintDimensionRatio="3:2"
       app:layout_constraintTop_toBottomOf="@id/toolbar"
       app:layout_constraintEnd_toEndOf="@id/guideline13"
       app:layout_constraintStart_toStartOf="@id/guideline12"/>


    <TextView
        android:id="@+id/txt_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Coffee Mocha"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toBottomOf="@+id/img_detail_poster" />

    <TextView
        android:id="@+id/txt_detail_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ice/hot"
        android:textColor="@color/text_gray"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toBottomOf="@+id/txt_detail_title" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/milk"
        android:background="@drawable/detail_option_bg"
        app:layout_constraintBottom_toBottomOf="@+id/txt_detail_description"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/txt_detail_description" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="14dp"
        android:src="@drawable/motor"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/baseline_star_24"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/txt_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Coffee Mocha"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="10dp"
        android:background="@color/lightGray"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/txt_full_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="A cappuccino is an approximately 150 ml (5 oz) beverage, eith 25 ml of espresso coffee and 85ml of fresh milk the fo.."
        android:textColor="@color/text_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toBottomOf="@+id/txt_description" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/layout_buy_button_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_buy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="@drawable/button_backgroung_rounded"
            android:text="@string/buy_now"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_total_price"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/text_gray"
            app:layout_constraintBottom_toTopOf="@+id/txt_total_price"
            app:layout_constraintStart_toStartOf="@+id/guideline14"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/txt_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$ 4.53"
            android:textColor="@color/bg_button"
            android:layout_marginTop="6dp"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline14"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_begin="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--guid line-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>